Fix text align center

--- a/src/styles/v-components/_Fave.scss
+++ b/src/styles/v-components/_Fave.scss
@@ -15,6 +15,7 @@
     color: $color-light;
     font-family: $font-family-primary;
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .remove-fave {
